--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url(fonts/holberton_school-icon.css);
+@import url(./fonts/holberton_school-icon.css);
 
 :root {
     --color-primary: #c271ff;
@@ -8,6 +8,12 @@ body {
     font-family: "Source Sans Pro", Arial, Helvetica, sans-serif !important;
 }
 
+
+.btn:hover,
+.btn:active {
+    opacity: 0.9;
+}
+
 .homepage {
     background-image: url(images/pic_1.jpg);
     background-position: center;
@@ -15,11 +21,33 @@ body {
     background-size: cover;
 }
 
-.card {
-    width: 150px;
-    height: 237px;
+
+.navbar-brand {
+    transform: translateX(-1.2rem);
 }
 
+.nav-link:hover {
+    color: var(--color-primary) !important;
+}
+
+@media screen and (max-width: 575px) {
+    .homepage {
+        background-size: 110vh;
+        background-position: top;
+    }
+}
+
+
+@media screen and (min-width: 576px) and (max-width: 767px) {
+    .display-1 {
+        font-size: 5rem !important;
+    }
+}
+@media screen and (max-width: 575px) {
+    .display-1 {
+        font-size: 3.5rem !important;
+    }
+}
 
 .section-hero {
     margin-top: 10rem;
@@ -27,6 +55,10 @@ body {
 
 .bg-purple {
     background-color: var(--color-primary) !important;
+}
+
+.bg-dark {
+    background-color: #071629 !important;
 }
 
 .pro-header {
@@ -42,4 +74,86 @@ strong {
     min-width: 43rem;
     min-height: 9.5rem;
     font-size: 7.5rem;
+}
+
+.text-purple {
+    color: var(--color-primary);
+}
+
+.carousel-section {
+    height: 392px;
+    padding-left: 16rem;
+    padding-right: 15rem;
+}
+
+.text-description {
+    font-size: 14px;
+}
+
+.color-purple {
+    color: var(--color-primary);
+}
+
+.opacity {
+    opacity: 0.6;
+}
+
+.play-overlay {
+    right: 50%;
+    top: 50%;
+    transform: translate(50%, -50%);
+}
+
+.carousel-control-prev {
+    margin-left: -7.5rem;
+}
+
+.carousel-control-next {
+    margin-right: -7.5rem;
+}
+
+.carousel-section-inner {
+    max-height: 160px;
+    padding: 0;
+
+}
+
+.pros-section, .card-img {
+    width: 150px;
+}
+
+.pricing {
+    background: url(images/pic_2.jpg) no-repeat top;
+    background-size: cover;
+    min-height: 80vh;
+    background-color: var(--color-dark) !important;
+}
+
+@media screen and (max-width: 575px) {
+    .pricing-header {
+        background-size: 80vh;
+        background-position: top;
+    }
+}
+
+
+.prices-grid .table {
+    table-layout: fixed;
+    margin-bottom: 0;
+    word-wrap: break-word;
+}
+
+.check-icon {
+    color: #82d24f;
+    font-size: 2rem;
+}
+
+.font-coiny {
+    font-family: "Coiny", Arial, Helvetica, sans-serif !important;
+}
+
+.courses {
+    background: url(images/pic_3.jpg) no-repeat top;
+    background-size: cover;
+    background-color: var(--color-dark) !important;
 }
